Modify user page
Add overlay close modal and zoom modal close button

--- a/view/user.html
+++ b/view/user.html
@@ -129,7 +129,7 @@
                         </div>
                         <button class="submit_button">Submit</button>
                         <div class="button_edit">
-                            <i class="fa-solid fa-circle-xmark" id='close_button'></i>
+                            <i class="fa-solid fa-xmark" id='close_button'></i>
                         </div>    
                     </form>
                 </div>
