--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -119,8 +119,8 @@ hr {
     border-radius: 4px; 
     border-style: none;
     color: #ffffff; 
-    width: 70px; 
-    height: 25px; 
+    width: 120px; 
+    height: 35px; 
     transition-duration: 0.4s; 
     cursor: pointer; 
 }
@@ -182,7 +182,7 @@ hr {
 .modal_content button {
     margin-top:10%;
     width:100%;
-    height:33px;
+    height:40px;
 }
 .modal_content-item{
     display: flex;
@@ -196,6 +196,9 @@ hr {
     margin-top: 10px;
     top:0;
     font-size:15px;
+    zoom:1.6;
+    padding: 0 10px;
+
 }
 select,input::placeholder{
     opacity:0.5;
