--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -139,3 +139,9 @@
 a:hover{
     text-decoration: underline;
 }
+
+@media only screen and (max-width: 850px) {
+    .content_description {
+        display: none;
+    }
+}
