--- a/view/signup_admin.html
+++ b/view/signup_admin.html
@@ -16,6 +16,16 @@
             <div class="content-form">
                 <div class="content-form_img--citizen">
                     <img src="/assets/img/admin.png" alt="">
+                    <div class="content-form_img--text">
+                        <div class="form_text--main">
+                            <h2>Welcome administrators to the Blood mana community!</h2>
+                            <hr>
+                            <p>Your contributions provide a big impact to elevate the Vietnamese health ecosystem</p>    
+                        </div>
+                        <div class="form_text--footer">
+                            <p>Team Name ;D</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="content-form_main">
                     <div class="text_heading">                    
@@ -54,7 +64,7 @@
                             </div>
                             <div class="content-form_footer-item">
                                 <p>Already had an account?                                
-                                    <a href="login.html">Sign in</a>
+                                    <a href="homepage.html">Sign in</a>
                                 </p>
                             </div>
                         </div>
