--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -30,10 +30,36 @@
     left:0;
 
 }
+.content-form_img--text {
+    position:absolute;
+    display: flex;
+    flex-direction: column;
+    margin-top: 190px;
+    text-align: center;
+    color:white;
+    padding: 0 20px;
+}
+
+.form_text--footer {
+    margin-top:60%;
+}
+.content-form_img--text h2 {
+    font-size:24px;
+}
+.content-form_img--text p {
+    opacity: 0.7;
+    font-weight: 500;
+    font-size:20px;
+}
+.content-form_img--text hr {
+    width:30%;
+    border: 1px solid;
+}
 .content-form_img--citizen img{
     zoom:100;
     width:100%;
     height:100%;
+    position:absolute;
 }
 .content-form_main {
     /* margin:0 100px; */
@@ -76,6 +102,7 @@
     margin-left: 30px;
     flex-grow:1;
     margin-right: 80px;
+    padding-right:20px;
 }
 .content-form_item input::placeholder {
     padding-left:30px;
@@ -158,4 +185,43 @@ a:hover{
     color: #31b882; 
     border:solid;
     border-color:#31b882;
+}
+.content-form_checkbox-policy {
+    margin-right:10px;
+}
+
+@media only screen and (max-width: 850px) {
+    .content-form_item {
+        flex-direction: column;
+    }
+    .content-form_img--citizen img {
+        display: none;
+    }
+    .content-form_main {
+        /* margin:0 100px; */
+        /* position:absolute; */
+        /* right:0; */
+        width:100%;
+        /* margin-left:45%; */
+        /* padding:5% 0%; */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+        margin-right:40%;
+        /* align-items: center; */
+        /* align-self: flex-end; */
+    }
+    .content-form_item label {
+        margin-left:40px;
+        width:200px;
+    }
+    .content-form_img--text {
+        display: none;
+    }
+    .content-form_checkbox-policy {
+        margin-right:20px;
+        padding-right: 20px;
+    }
+
 }
