--- a/view/signup_hospital.html
+++ b/view/signup_hospital.html
@@ -16,6 +16,17 @@
             <div class="content-form">
                 <div class="content-form_img--citizen">
                     <img src="/assets/img/hospital_bg.png" alt="">
+                    <div class="content-form_img--text">
+                        <div class="form_text--main">
+                            <h2>Welcome hospital officers to the Blood mana community!</h2>
+                            <hr>
+                            <p>Collaborate with more than 50 hospitals in our ecosystem</p>    
+                        </div>
+                        <div class="form_text--footer">
+                            <p>Team Name ;D</p>
+                        </div>
+                    </div>
+
                 </div>
                 <div class="content-form_main">
                     <div class="text_heading">                    
@@ -54,7 +65,7 @@
                             </div>
                             <div class="content-form_footer-item">
                                 <p>Already had an account?                                
-                                    <a href="login.html">Sign in</a>
+                                    <a href="homepage.html">Sign in</a>
                                 </p>
                             </div>
                         </div>
