--- a/assets/css/design.css
+++ b/assets/css/design.css
@@ -8,23 +8,23 @@
 
 .nav__link{
     text-decoration: none;
+    display: block;
+    font-weight: bold;
+    /* padding: 20px 10px; */
+    padding: 1.3rem 1rem;
 }
 
 .logo img {
-    width: 40px;
+    /* width: 40px; */
+    width: 2.5rem;
     margin-right: 5px;
 }
 
 nav {
     background-color: white;
-    padding: 10px;
+    padding: 0px 10px;
     display: flex;
     align-items: center;
-}
-
-.nav__link{
-    padding: 21px 40px;
-    font-weight: bold;
 }
 
 .nav__link:hover {
@@ -40,11 +40,12 @@ nav {
     text-decoration: none;
     display: flex;
     align-items: center;
-    font-size: 20px;
+    /* font-size: 20px; */
+    font-size: 1.3rem;
 }
 
 .nav_pc{
-    display: flex;
+    display: none;
     align-items: center;
     list-style: none;
 }
@@ -65,26 +66,15 @@ nav {
 }
 
 .nav__toggle{
-    font-size: 20px;
+    /* font-size: 20px; */
+    font-size: 1.2rem;
     margin: 5px;
     color: #2e3090;
-    display: none;
+    display: block;
+    padding: 15px 10px;
 }
 
-@media (max-width: 1023px){
-    .nav__toggle{
-        display: block;
-    }
 
-    .nav_pc{
-        display: none;
-    }
-
-    .nav__link{
-        display: block;
-        padding: 10px 10px;
-    }
-}
 
 .overlay{
     position: fixed;
@@ -97,11 +87,15 @@ nav {
     animation: fadeIn linear 0.2s;
 }
 
-.nav__close_button{
+.close_button{
     position: absolute;
     top: 1rem;
     right: 1rem;
     color: #2e3090;
+    padding-top: 5px;
+    padding-right: 5px;
+    padding-left: 20px;
+    padding-bottom: 20px;
 }
 
 #nav_mobile__toggle_check:checked ~ .overlay{
@@ -122,45 +116,93 @@ nav {
     }
 }
 
+/* avatar field */
+.avatar_field{
+    display: flex;
+    position: relative;
+    padding: 0.5rem 1rem;
+}
+
+.avatar_field img{
+    width: 40px;
+    margin-right: 5px;
+}
+
+.avatar_field #user{
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+}
+
+.avatar_field ul{
+    width: 100%;
+    flex-direction: column;
+    position: absolute;
+    background-color: white;
+    top: 3.75rem;
+    right: -0.5rem;
+    display: none;
+    opacity: 0;
+    animation: fadeIn linear 0.2s;
+}
+
+.avatar_field:hover > ul, .settings:hover{
+    display: flex;
+    /* visibility: visible; */
+    opacity: 1;
+}
+
+.settings{
+    font-weight: 100;
+}
+
+.settings:hover .header_icons{
+    transform: scale(1.08) translateY(-2px);
+}
+
 /* background */
 body {
     background-color: rgb(244, 244, 244);
 }
 
+main{
+    margin: 10%;
+}
+
 /* hospital staff */
 .general_info{
     display: flex;
-    /* padding: 20px; */
+    flex-wrap: wrap;
 }
 
 .general_info__hospital{
-    width: 40%;
+    width: 100%;
     background-color: white;
     padding: 30px;
-    margin: 50px;
     border-radius: 5px;
+    position: relative;
 }
 
 .general_info__blood{
-    width: 60%;
+    margin-top: 50px;
+    width: 100%;
     display: flex;
 }
 
+
 .general_info__blood__1{
     width: 50%;
-    margin: 50px;
-    margin-right: 20px;
+    margin-right: 40px;
 }
 
 .general_info__blood__2{
     width: 50%;
-    margin: 50px;
-    margin-left: 20px;
 }
 
-/* chua xong cai icon edit */
-.general_info__edit{
-    /* position: relative; */
+.general_info__edit_button{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
 }
 
 .general_info__hospital_name{
@@ -171,7 +213,6 @@ body {
     font-weight: bold;
 }
 
-
 .hospital_details{
     padding: 10px 30px;
 }
@@ -180,7 +221,7 @@ body {
     display: block;
 }
 
-#edit_check:checked ~ .edit_form{
+#edit_check:checked ~ #general_info__edit_form{
     display: block;
 }
 
@@ -209,10 +250,11 @@ body {
 }
 
 .blood_info{
-    margin: 30px 50px;
+    margin-top: 30px;
 }
 
 .nav_blood{
+    text-decoration: none;
     display: block;
     text-align: center;
     float: left;
@@ -247,14 +289,17 @@ body {
 
     #blood_table td, #blood_table th {
     border-bottom: 1px solid #ddd;
-    padding: 15px;
+    /* padding: 15px; */
+    padding: 1rem;
     }
 
     #blood_table tr:hover {background-color: #ddd;}
 
     #blood_table th {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    /* padding-top: 20px;
+    padding-bottom: 20px; */
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
     text-align: left;
 }
 
@@ -293,28 +338,127 @@ body {
     display: block;
 }
 
-.edit_form{
+#request_button_check:checked ~ #request_form{
+    display: block;
+}
+
+#general_info__edit_form{
+    width: 40%;
+    padding: 3rem 4rem;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 40%;
-    height: 40%;
     background-color: white;
     border-radius: 10px;
     display: none;
     animation: fadeIn linear 0.2s;
 }
 
-#general_info__edit{
+.form_header{
+    text-align: center;
+    padding: 1.5rem;
+    font-weight: bold;
+    /* font-size: 20px; */
+    font-size: 150%;
+}
+
+.fields{
+    margin: 15px 0px;
+    margin: 1.5rem 0px;
     display: flex;
     flex-wrap: wrap;
+    font-size: 130%;
 }
 
-.label{
-    width: 30%;
+.labels{
+    flex: 100%;
 }
 
-.input{
-    width: 70%;
+.inputs{
+    flex: 100%;
+    background-color: rgb(244, 244, 244);
+    border-radius: 3px;
+    border: none;
+    height: 1.8rem;
+}
+
+.submit_button{
+    border: 0;
+    text-align: center;
+    width: 100%;
+    padding: 10px;
+    background-color: #f2665e;
+    color: white;
+    font-weight: bold;
+    font-size: 13px;
+    margin: auto;
+}
+
+.submit_button:hover{
+    background-color:#d55851;
+}
+.submit_button:active{
+    background-color:#c5524c;
+}
+
+#request_form{
+    width: 40%;
+    padding: 3rem 4rem;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border-radius: 10px;
+    display: none;
+    animation: fadeIn linear 0.2s;
+}
+
+.request_message{
+    height: 100%;
+}
+
+@media (min-width: 1023px){
+    .nav__toggle{
+        display: none;
+    }
+
+    .nav_pc{
+        display: flex;
+    }
+
+    .nav__link{
+        padding: 21px 40px;
+    }
+
+    .general_info{
+        flex-wrap: nowrap;
+    }
+
+    .general_info__hospital{
+        width: 40%;
+    }
+
+    .general_info__blood{
+        margin-top: 0px;
+        margin-left: 40px;
+        width: 60%;
+    }
+    .fields{
+        display: flex;
+        flex-wrap: nowrap;
+    }
+
+    .labels{
+        width: 30%;
+    }
+
+    .inputs{
+        width: 70%;
+    }
+
+    .avatar_field{
+        padding: 10px 25px;
+    }
 }
