--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -3,6 +3,8 @@
     font-size: 14px;
     color:#313795;
     font-weight:bold;
+    height:100vh;
+    width:100vw;
     /* background-color: red; */
 }
 .content {
@@ -16,10 +18,10 @@
 }
 .content-form {
     background-color:#ffffff;
-    margin:3% 15%; 
+    margin:10px 15%; 
     display: flex;
-    width:90%;
-    height:60%;
+    width:80vw;
+    height:60vh;
     position:relative;
     justify-content: space-around;
 }
