--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -2,8 +2,8 @@
     background-color: #efefef;
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
-    padding: 30px 30px; 
-    padding-right: 40px; 
+    padding-top: 100px;
+    padding: 0% 15%;
 }
 .profile {
     width: 26%; 
@@ -154,14 +154,18 @@ hr {
 
 }
 .modal_background {
-    width:100%;
-    height:100%;
-    position:absolute; 
+    position:fixed; 
     background-color: rgba(0,0,0,0.7);
     top:0;
+    left:0;
+    bottom:0;
+    right:0;
     display: flex;
     justify-content: center;
     display:none; 
+}
+form {
+    background-color: white;
 }
 .modal_content {
     width:34%;
