--- a/view/user.html
+++ b/view/user.html
@@ -7,9 +7,9 @@
     <title>User Page</title>
     <script src="https://kit.fontawesome.com/5c11fd58e9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/assets/css/user.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> -->
 
 </head>
 <body>
