--- a/assets/css/design.css
+++ b/assets/css/design.css
@@ -1,80 +1,9 @@
-/* header */
 * {
     box-sizing: border-box;
     padding: 0px;
     margin: 0px;
     color: #2e3090;
 }
-
-.nav__link{
-    text-decoration: none;
-    display: block;
-    font-weight: bold;
-    /* padding: 20px 10px; */
-    padding: 1.3rem 1rem;
-}
-
-.logo img {
-    /* width: 40px; */
-    width: 2.5rem;
-    margin-right: 5px;
-}
-
-nav {
-    background-color: white;
-    padding: 0px 10px;
-    display: flex;
-    align-items: center;
-}
-
-.nav__link:hover {
-    background-color: rgb(236, 235, 235);
-}
-
-.logo {
-    flex: 1;
-}
-
-.logo a {
-    font-weight: bold;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    /* font-size: 20px; */
-    font-size: 1.3rem;
-}
-
-.nav_pc{
-    display: none;
-    align-items: center;
-    list-style: none;
-}
-
-.nav_mobile{
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    width: 280px;
-    max-width: 100%;
-    background-color: white;
-    list-style: none;
-    display: block;
-    transform: translateX(200%); 
-    opacity: 0;
-    transition: all 0.3s;
-}
-
-.nav__toggle{
-    /* font-size: 20px; */
-    font-size: 1.2rem;
-    margin: 5px;
-    color: #2e3090;
-    display: block;
-    padding: 15px 10px;
-}
-
-
 
 .overlay{
     position: fixed;
@@ -98,15 +27,6 @@ nav {
     padding-bottom: 20px;
 }
 
-#nav_mobile__toggle_check:checked ~ .overlay{
-    display: block;
-}
-
-#nav_mobile__toggle_check:checked ~ .nav_mobile{
-    transform: translateX(0%);
-    opacity: 1;
-}
-
 @keyframes fadeIn {
     from{
         opacity: 0;
@@ -114,50 +34,6 @@ nav {
     to{
         opacity: 1;
     }
-}
-
-/* avatar field */
-.avatar_field{
-    display: flex;
-    position: relative;
-    padding: 0.5rem 1rem;
-}
-
-.avatar_field img{
-    width: 40px;
-    margin-right: 5px;
-}
-
-.avatar_field #user{
-    display: flex;
-    align-items: center;
-    font-weight: bold;
-}
-
-.avatar_field ul{
-    width: 100%;
-    flex-direction: column;
-    position: absolute;
-    background-color: white;
-    top: 3.75rem;
-    right: -0.5rem;
-    display: none;
-    opacity: 0;
-    animation: fadeIn linear 0.2s;
-}
-
-.avatar_field:hover > ul, .settings:hover{
-    display: flex;
-    /* visibility: visible; */
-    opacity: 1;
-}
-
-.settings{
-    font-weight: 100;
-}
-
-.settings:hover .header_icons{
-    transform: scale(1.08) translateY(-2px);
 }
 
 /* background */
@@ -169,7 +45,7 @@ main{
     margin: 10%;
 }
 
-/* hospital staff */
+/* hospital blood */
 .general_info{
     display: flex;
     flex-wrap: wrap;
@@ -181,6 +57,7 @@ main{
     padding: 30px;
     border-radius: 5px;
     position: relative;
+    z-index: -1;
 }
 
 .general_info__blood{
@@ -249,11 +126,11 @@ main{
     margin-top: 40px;
 }
 
-.blood_info{
+.info_section{
     margin-top: 30px;
 }
 
-.nav_blood{
+.nav_items{
     text-decoration: none;
     display: block;
     text-align: center;
@@ -261,41 +138,42 @@ main{
     padding: 15px;
 }
 
-.nav_blood:hover{
+.nav_items:hover{
     background-color: rgb(236, 235, 235);
 }
 
-.request_button{
+.open_form_button{
     float:right;
     background-color: #f2665e;
     color: white;
     font-weight: bold;
-    border-radius: 10px;
+    border-radius: 8px;
+    margin-left: 1rem;
 }
 
-.request_button:hover{
+.open_form_button:hover{
     background-color:#d55851;
 }
-.request_button:active{
+.open_form_button:active{
     background-color:#c5524c;
 }
 
-#blood_table {
+.details_table {
     border-radius: 5px;
     background-color: white;
     border-collapse: collapse;
     width: 100%;
     }
 
-    #blood_table td, #blood_table th {
+    .details_table td, .details_table th {
     border-bottom: 1px solid #ddd;
     /* padding: 15px; */
     padding: 1rem;
     }
 
-    #blood_table tr:hover {background-color: #ddd;}
+    .details_table tr:hover {background-color: #ddd;}
 
-    #blood_table th {
+    .details_table th {
     /* padding-top: 20px;
     padding-bottom: 20px; */
     padding-top: 1.5rem;
@@ -342,22 +220,25 @@ main{
     display: block;
 }
 
-#general_info__edit_form{
-    width: 40%;
-    padding: 3rem 4rem;
+.pop_up_form{
+    width: 80%;
+    padding: 1rem 2rem;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
     border-radius: 10px;
-    display: none;
     animation: fadeIn linear 0.2s;
+}
+
+#general_info__edit_form{
+    display: none;
 }
 
 .form_header{
     text-align: center;
-    padding: 1.5rem;
+    padding-top: 1.5rem;
     font-weight: bold;
     /* font-size: 20px; */
     font-size: 150%;
@@ -403,20 +284,36 @@ main{
 }
 
 #request_form{
-    width: 40%;
-    padding: 3rem 4rem;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    border-radius: 10px;
     display: none;
-    animation: fadeIn linear 0.2s;
 }
 
 .request_message{
     height: 100%;
+}
+
+/* hospital staff */
+#add_shipper_form{
+    display: none;
+}
+
+#add_shipper_button_check:checked ~ #overlay1{
+    display: block;
+}
+
+#add_shipper_button_check:checked ~ #add_shipper_form{
+    display: block;
+}
+
+#add_staff_form{
+    display: none;
+}
+
+#add_staff_button_check:checked ~ #overlay2{
+    display: block;
+}
+
+#add_staff_button_check:checked ~ #add_staff_form{
+    display: block;
 }
 
 @media (min-width: 1023px){
@@ -451,14 +348,32 @@ main{
     }
 
     .labels{
-        width: 30%;
+        flex: 20%;
     }
 
     .inputs{
-        width: 70%;
+        flex: 80%;
     }
+
+    .labels_edit{
+        min-width: 37%;
+    }
+
+    /* .blood_group_label{
+        min-width: 30%;
+    } */
 
     .avatar_field{
         padding: 10px 25px;
+    }
+
+    .pop_up_form{
+        width: 50%;
+        padding: 3rem 4rem;
+    }
+
+    .form_header{
+        padding-top: 0rem;
+        padding: 1.5rem;
     }
 }
