--- a/view/homepage.html
+++ b/view/homepage.html
@@ -18,8 +18,9 @@
                 <h1>Donations save lives</h1>
                 <hr>
                 <p>Team Description of the Website</p>
-
-                <button class="submit_button">Read More</button>
+                <form action="">
+                    <input type="submit"class="submit_button"value="Read More"></input>
+                </form>
             </div>
             <div class="content_signup">
                 <div class="signup_form">
@@ -36,8 +37,8 @@
                                 <label for="new_password">Password</label>
                                 <input type="password" name="new_password" id="new_password"placeholder="Enter your password">
                             </div>
-                            <div class="signup_form-item">
-                                <button class="button-primary">Login</button>
+                            <div class="signup_form-button">
+                                <input class="button-primary"value='Login'></input>
                             </div>
                             <div class="signup_form-footer">
                                 <div class="signup_form-footer-item">
