--- a/view/signup_citizen.html
+++ b/view/signup_citizen.html
@@ -57,18 +57,17 @@
                                     <p>By clicking, you agree with our <a href="policy.html">Terms and Policies</a></p>
                                 </div>
                             </div>
+                            <div class="content-form_footer">
+                                <div class="content-form_footer-item">                        
+                                    <input class="submit-button"value="Register"></input>
+                                </div>
+                                <div class="content-form_footer-item">
+                                    <p>Already had an account?                                
+                                        <a href="homepage.html">Sign in</a>
+                                    </p>
+                                </div>
+                            </div>
                         </form>
-                        <div class="content-form_footer">
-                            <div class="content-form_footer-item">                        
-                                <button class="submit-button">Register</button>
-                            </div>
-                            <div class="content-form_footer-item">
-                                <p>Already had an account?                                
-                                    <a href="homepage.html">Sign in</a>
-                                </p>
-                            </div>
-                        </div>
-
                     </div>
                 </div>
             </div>
