--- a/view/user.html
+++ b/view/user.html
@@ -103,7 +103,7 @@
                         </table>
                     </div>
                     <div class="donation_his__table-button">
-                        <button class="submit_button">Load More</button>  
+                        <input type="submit" class="submit_button">Load More</input>  
                     </div>  
                 </div>
                 </div>    
@@ -127,7 +127,7 @@
                             <label for="booking_quantity">Quantity</label>
                             <input type="number" name="booking_quantity" id="booking_quantity" placeholder="Select donation quantity">
                         </div>
-                        <button class="submit_button">Submit</button>
+                        <input type="Submit" class="submit_button"></input>
                         <div class="button_edit">
                             <i class="fa-solid fa-xmark" id='close_button'></i>
                         </div>    
