--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -42,7 +42,7 @@
     opacity: 0.7;
     font-size: 30px;
 }
-.content_description button {
+.content_description input {
     border: 2px solid #ffffff;
     background-color: transparent;
     width:75%;
@@ -98,8 +98,8 @@
     font-weight: 400;
 
 }
-.signup_form-item button {
-    height:60px;
+.signup_form-button input {
+    height:3.3vh;
     border-style: none;
     background-color: #f36866;
     color:#ffffff;
@@ -108,8 +108,10 @@
     margin-top:20px;
     transition-duration: 0.4s; 
     cursor: pointer; 
+    text-align:center;
+    width:95%;
 }
-.signup_form-item button:hover{
+.signup_form-button input:hover{
     background-color: #ffffff;
     color: #f36866; 
     border:solid;
