--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -121,7 +121,7 @@ hr {
     border-radius: 4px; 
     border-style: none;
     color: #ffffff; 
-    width: 120px; 
+    width: 100px; 
     height: 35px; 
     transition-duration: 0.4s; 
     cursor: pointer; 
@@ -169,14 +169,14 @@ form {
 }
 .modal_content {
     width:34%;
-    height:40%;
+    /* height:40%; */
     background-color: #ffffff;
-    margin:auto; 
-    padding: 0 32px; 
+    margin: auto; 
+    padding: 24px 32px; 
     border-radius: 10px; 
     position: relative; 
 }
-.modal_content .text_heading{
+.text_heading{
     font-size: 16px; 
     text-align: center;
 }
@@ -186,20 +186,30 @@ form {
     min-width:40%; 
     margin-top:5%; 
 }
-.modal_content button {
+.modal_content input {
     margin-top:10%;
-    width:100%;
+    width: 300px;
     height:40px;
 }
 .modal_content-item{
     display: flex;
+    align-items: center;
 }
+
+.modal_content-item input {
+    height: 30px;
+}
+
+.modal_content-item label {
+    min-width: 90px;
+}
+
 .modal_content input, select {
     flex-grow:1;
     width:85px;
 }
 .modal_content .button_edit {
-    position:absolute;
+    position: absolute;
     margin-top: 10px;
     top:0;
     font-size:15px;
@@ -217,6 +227,31 @@ select,input::placeholder{
 .donation_his__table-button button{
     margin-top:10px;
 
+}
+.edit_modal_background{
+    position:fixed; 
+    background-color: rgba(0,0,0,0.7);
+    top:0;
+    left:0;
+    bottom:0;
+    right:0;
+    display: flex;
+    justify-content: center;
+    display:none; 
+}
+.modal_content .text_heading {
+    font-size: 16px; 
+    text-align: center;
+    margin-top:20px;
+    font-weight: bold;
+    padding: 0 0 10px;
+
+}
+
+.modal_content .submit_button {
+    width: 100%;
+    /* align-self: center;/ */
+    /* margin: auto; */
 }
 
 /* Responsive */
@@ -237,5 +272,16 @@ select,input::placeholder{
         width: 70%;
         height:50px;
     }
-
+    .modal_content-item{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .modal_content-item input {
+        width:100%;
+    }
+    .modal_content-item label {
+        align-self: flex-start;
+    }
+    
 }
