--- a/assets/css/design.css
+++ b/assets/css/design.css
@@ -14,6 +14,11 @@
     background-color: rgba(0,0,0,0.4);
     display: none;
     animation: fadeIn linear 0.2s;
+    z-index: 10;
+}
+
+.mobile_hide{
+    display: none;
 }
 
 .close_button{
@@ -42,7 +47,7 @@ body {
 }
 
 main{
-    margin: 10%;
+    margin: 5%;
 }
 
 /* hospital blood */
@@ -57,7 +62,7 @@ main{
     padding: 30px;
     border-radius: 5px;
     position: relative;
-    z-index: -1;
+    z-index: 1;
 }
 
 .general_info__blood{
@@ -98,7 +103,7 @@ main{
     display: block;
 }
 
-#edit_check:checked ~ #general_info__edit_form{
+#edit_check:checked ~ #general_info__edit_form {
     display: block;
 }
 
@@ -126,15 +131,31 @@ main{
     margin-top: 40px;
 }
 
+.info_section__nav{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+}
+
+.nav_items_left,
+.nav_items_right{
+    width: 100%;
+}
+
+.nav_items_left{
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+}
+
 .info_section{
     margin-top: 30px;
 }
 
 .nav_items{
     text-decoration: none;
-    display: block;
     text-align: center;
-    float: left;
     padding: 15px;
 }
 
@@ -143,12 +164,12 @@ main{
 }
 
 .open_form_button{
-    float:right;
     background-color: #f2665e;
     color: white;
     font-weight: bold;
     border-radius: 8px;
-    margin-left: 1rem;
+    width: 45%;
+    /* margin-left: 1rem; */
 }
 
 .open_form_button:hover{
@@ -230,6 +251,8 @@ main{
     background-color: white;
     border-radius: 10px;
     animation: fadeIn linear 0.2s;
+    /* display: none; */
+    z-index: 11;
 }
 
 #general_info__edit_form{
@@ -317,6 +340,14 @@ main{
 }
 
 @media (min-width: 1023px){
+    main{
+        margin: 10%;
+    }
+    
+    .mobile_hide{
+        display: block;
+    }
+
     .nav__toggle{
         display: none;
     }
@@ -375,5 +406,14 @@ main{
     .form_header{
         padding-top: 0rem;
         padding: 1.5rem;
+    }
+
+    .info_section__nav{
+        flex-direction: column;
+    }
+
+    .nav_items_left,
+    .nav_items_right{
+        width: 45%;
     }
 }
