--- a/view/homepage.html
+++ b/view/homepage.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/assets/css/homepage.css">
+    <link rel="stylesheet" href="/assets/css/buttons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -22,7 +23,7 @@
                 <hr>
                 <p>Team Description of the Website</p>
                 <form action="">
-                    <input type="submit"class="submit_button"value="Read More"></input>
+                    <input type="submit"class="view-button"value="Read More"></input>
                 </form>
             </div>
             <div class="content_signup">
@@ -41,7 +42,7 @@
                                 <input type="password" name="new_password" id="new_password"placeholder="Enter your password">
                             </div>
                             <div class="signup_form-button">
-                                <input class="button-primary"value='Login'></input>
+                                <input class="submit-button button-primary"value='Login'></input>
                             </div>
                             <div class="signup_form-footer">
                                 <div class="signup_form-footer-item">
