--- a/view/signup_admin.html
+++ b/view/signup_admin.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/assets/css/signup.css">
+    <link rel="stylesheet" href="/assets/css/buttons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -15,12 +16,12 @@
         <div class="content">
             <div class="content-form">
                 <div class="content-form_img--citizen">
-                    <img src="/assets/img/donator_bg.png" alt="">
+                    <img src="/assets/img/admin.png" alt="">
                     <div class="content-form_img--text">
                         <div class="form_text--main">
-                            <h2>Welcome donators to the Blood mana community!</h2>
+                            <h2>Welcome administrators to the Blood mana community!</h2>
                             <hr>
-                            <p>Your donations spread love, hope, and save lives</p>    
+                            <p>Your contributions provide a big impact to elevate the Vietnamese health ecosystem</p>    
                         </div>
                         <div class="form_text--footer">
                             <p>Team Name ;D</p>
@@ -59,7 +60,7 @@
                             </div>
                             <div class="content-form_footer">
                                 <div class="content-form_footer-item">                        
-                                    <input class="submit-button"value="Register"></input>
+                                    <input class="submit-button admin-button" id="admin_button"value="Register"></input>
                                 </div>
                                 <div class="content-form_footer-item">
                                     <p>Already had an account?                                
