--- a/view/signup_hospital.html
+++ b/view/signup_hospital.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/assets/css/signup.css">
+    <link rel="stylesheet" href="../assets/css/signup.css">
+    <link rel="stylesheet" href="../assets/css/buttons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -15,17 +16,18 @@
         <div class="content">
             <div class="content-form">
                 <div class="content-form_img--citizen">
-                    <img src="/assets/img/admin.png" alt="">
+                    <img src="/assets/img/hospital_bg.png" alt="">
                     <div class="content-form_img--text">
                         <div class="form_text--main">
-                            <h2>Welcome administrators to the Blood mana community!</h2>
+                            <h2>Welcome hospital officers to the Blood mana community!</h2>
                             <hr>
-                            <p>Your contributions provide a big impact to elevate the Vietnamese health ecosystem</p>    
+                            <p>Collaborate with more than 50 hospitals in our ecosystem</p>    
                         </div>
                         <div class="form_text--footer">
                             <p>Team Name ;D</p>
                         </div>
                     </div>
+
                 </div>
                 <div class="content-form_main">
                     <div class="text_heading">                    
@@ -59,15 +61,15 @@
                             </div>
                             <div class="content-form_footer">
                                 <div class="content-form_footer-item">                        
-                                    <input class="submit-button" id="admin_button"value="Register"></input>
+                                    <input class="submit-button button-primary"id="hospital_button"value="Register"></input>
                                 </div>
                                 <div class="content-form_footer-item">
                                     <p>Already had an account?                                
                                         <a href="homepage.html">Sign in</a>
                                     </p>
                                 </div>
-                            </div>
                         </form>
+                        </div>
                     </div>
                 </div>
             </div>
