--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -42,7 +42,7 @@
     opacity: 0.7;
     font-size: 30px;
 }
-.content_description input {
+.content_description .view-button {
     border: 2px solid #ffffff;
     background-color: transparent;
     width:75%;
@@ -54,7 +54,7 @@
     opacity: 0.7;
     transition-duration: 0.2s; 
 }
-.content_description button:hover {
+.content_description .view-button:hover {
     border: 4px solid #ffffff;
 }
 .content_signup {
@@ -92,11 +92,7 @@
     border-radius: 8px;
     border-style: none;
     background-color: #f3f3f3;
-}
-.signup_form-item input::placeholder {
     padding-left:20px;
-    font-weight: 400;
-
 }
 .signup_form-button input {
     height:3.3vh;
@@ -110,12 +106,6 @@
     cursor: pointer; 
     text-align:center;
     width:95%;
-}
-.signup_form-button input:hover{
-    background-color: #ffffff;
-    color: #f36866; 
-    border:solid;
-    border-color:#f36866;
 }
 .signup_form-footer {
     font-weight: 500;
