--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -73,6 +73,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position:relative;
     /* align-items: center; */
     /* align-self: flex-end; */
 
@@ -82,11 +83,17 @@
     color: #313795;
     font-weight:bolder;
     font-size:30px;
+    position:absolute;
+    top:0;
+    left:0;
+    /* margin-bottom:20px; */
 }
 .content-form_items {
+    top:100px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    position:absolute;
     /* width:300px; */
 }
 .content-form_item {
@@ -103,6 +110,7 @@
     height:50px;
     margin-left: 30px;
     flex-grow:1;
+    min-width:300px;
     margin-right: 80px;
     padding-right:20px;
     padding-left:30px;
@@ -110,6 +118,8 @@
 .content-form_checkbox {
     display: flex;
     align-items: center;
+    position:absolute;
+    margin-top:0;
     /* justify-content: space-; */
 }
 
@@ -137,6 +147,8 @@
     flex-direction: column;
     justify-content: center;
     align-content: center;
+    position:absolute;
+    margin-top:100px;
 }
 .content-form_footer-item {
     margin-right:40px;
@@ -144,24 +156,17 @@
 }
 .submit-button{
     background-color: #269bc7;
-    border-radius: 4px; 
+    border-radius: 6px; 
     border-style: none;
     color: #ffffff; 
     max-width: 30rem; 
-    width:25rem;
-    height: 3.1rem; 
+    height: 60px; 
+    width:400px;
     transition-duration: 0.4s; 
     cursor: pointer; 
     border-radius: 5px;
     text-align: center;
     /* margin-right:60px; */
-
-}
-.submit-button:hover{
-    background-color: #ffffff;
-    color: #269bc7; 
-    border:solid;
-    border-color:#269bc7;
 }
 a {
     text-decoration: none;
@@ -169,24 +174,6 @@ a {
 }
 a:hover{
     text-decoration:underline;
-}
-#hospital_button {
-    background-color: #f1655b;
-}
-#hospital_button:hover{
-    background-color: #ffffff;
-    color: #f1655b; 
-    border:solid;
-    border-color:#f1655b;
-}
-#admin_button {
-    background-color: #31b882;
-}
-#admin_button:hover {
-    background-color: #ffffff;
-    color: #31b882; 
-    border:solid;
-    border-color:#31b882;
 }
 .content-form_checkbox-policy {
     margin-right:10px;
