--- a/view/user.html
+++ b/view/user.html
@@ -7,6 +7,7 @@
     <title>User Page</title>
     <script src="https://kit.fontawesome.com/5c11fd58e9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/assets/css/user.css">
+    <link rel="stylesheet" href="/assets/css/buttons.css">
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> -->
@@ -88,7 +89,7 @@
             <div class="donation_his">
                 <div class="donation_his__header">
                     <h2 class="text_heading">Donation History</h2>
-                    <button class="submit_button" id="donation_his__button">Donate</button>    
+                    <input class="submit-button button-primary" id="donation_his__button" value="Donate"></input>    
                 </div>
                 <div class="donation_his__table"> 
                     <div class="donation_his__table-item">
@@ -103,7 +104,7 @@
                         </table>
                     </div>
                     <div class="donation_his__table-button">
-                        <input type="submit" class="submit_button" value="Load More"></input>  
+                        <input type="submit" class="submit-button button-primary" value="Load More"></input>  
                     </div>  
                 </div>
                 </div>    
@@ -115,7 +116,7 @@
                     <form action="">
                         <div class="modal_content-item">
                             <label for="booking_hospital">Hospital</label>
-                            <select name="hospital" id="booking_hospital" >
+                            <select name="hospital" id="booking_hospital">
                                 <option value="">Select a hospital</option>
                             </select>
                         </div>
@@ -128,7 +129,7 @@
                             <input type="number" name="booking_quantity" id="booking_quantity" placeholder="Select donation quantity">
                         </div>
                         
-                        <input type="Submit" class="submit_button" value="Submit"></input>
+                        <input type="Submit" class="submit-button button-primary" value="Submit"></input>
                         <div class="button_edit">
                             <i class="fa-solid fa-xmark" id='close_button'></i>
                         </div>    
@@ -153,7 +154,7 @@
                             <label for="edit_phone">Phone:</label>
                             <input type="number" id="edit_phone">
                         </div>
-                        <input type="Submit" class="submit_button"></input>
+                        <input type="Submit" class="submit-button button-primary" value="Submit"></input>
                         <div class="button_edit">
                             <i class="fa-solid fa-xmark" id='close_button'></i>
                         </div>   
