--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -121,7 +121,7 @@ hr {
     border-radius: 4px; 
     border-style: none;
     color: #ffffff; 
-   width:0.3px;
+    width:0.3px;
     height: 30px; 
     transition-duration: 0.4s; 
     cursor: pointer; 
@@ -153,17 +153,6 @@ hr {
     height: 100%; 
 
 }
-.modal_background {
-    position:fixed; 
-    background-color: rgba(0,0,0,0.7);
-    top:0;
-    left:0;
-    bottom:0;
-    right:0;
-    display: flex;
-    justify-content: center;
-    display:none; 
-}
 form {
     background-color: white;
 }
@@ -175,6 +164,13 @@ form {
     padding: 24px 32px; 
     border-radius: 10px; 
     position: relative; 
+    z-index:999;
+}
+.modal_background {
+    display: none;
+}
+.edit_background {
+    display: none;
 }
 .text_heading{
     font-size: 16px; 
@@ -183,8 +179,14 @@ form {
 .modal_content label,input,select { 
     color: #39395b; 
     font-weight: bold; 
-    min-width:40%; 
+    /* min-width:40%;  */
     margin-top:5%; 
+}
+.donation_his__table-button input {
+    min-width:40%;
+}
+#donation_his__button {
+    min-width: 20%;
 }
 .modal_content input {
     margin-top:10%;
@@ -194,6 +196,7 @@ form {
 .modal_content-item{
     display: flex;
     align-items: center;
+    justify-items: center;
 }
 
 .modal_content-item input {
@@ -235,9 +238,11 @@ select,input::placeholder{
     left:0;
     bottom:0;
     right:0;
-    display: flex;
     justify-content: center;
     display:none; 
+    width:100%;
+    height:100%;
+    z-index:799;
 }
 .modal_content .text_heading {
     font-size: 16px; 
