--- a/view/user.html
+++ b/view/user.html
@@ -137,8 +137,8 @@
                 </div>
             </div>
         </div>
-        <div class="edit_modal">
-            <div class="edit_modal_background">
+        <div class="edit_overlay">
+            <div class="edit_background">
                 <div class="modal_content">
                     <div class="text_heading">Edit Profile</div>
                     <form action="">
@@ -162,6 +162,7 @@
                 </div>
             </div>
         </div>
+        <div class="edit_modal_background"></div>
     </div>
     <script src="/script/user.js"></script>
 </body>
