--- a/assets/css/headernfooter.css
+++ b/assets/css/headernfooter.css
@@ -1,9 +1,18 @@
 /* header */
-* {
+header {
     box-sizing: border-box;
     padding: 0px;
     margin: 0px;
     color: #2e3090;
+    font-family: 'Open Sans', sans-serif;
+}
+
+footer {
+    box-sizing: border-box;
+    padding: 0px;
+    margin: 0px;
+    color: #2e3090;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .nav__link{
